environments/stage/apps/app-taxi/services/taxi/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: taxi
    app.kubernetes.io/part-of: app-taxi
  name: taxi
  namespace: stage
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: taxi
      app.kubernetes.io/part-of: app-taxi
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: taxi
        app.kubernetes.io/part-of: app-taxi
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/dev/taxi:master-1aa795b54149169d18c9e4365c6ef7bbeab92627
        imagePullPolicy: Always
        name: taxi
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
