environments/stage/apps/app-taxi/services/taxi/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: taxi
  namespace: stage
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: taxi
    weight: 100
  wildcardPolicy: None
